# PrecodeOS

./: .gitignore  20260426T174057Z-github-audit.json  20260426T174113Z-github-audit.json  20260426T174137Z-github-audit.json  20260426T180631Z-github-audit.json  20260426T181144Z-github-audit.json  20260426T181205Z-github-audit.json  20260426T181827Z-github-audit.json  20260426T181847Z-github-audit.json  20260426T182809Z-github-audit.json  20260426T182828Z-github-audit.json  20260426T183558Z-github-audit.json  20260426T183636Z-github-audit.json  20260426T183640Z-github-audit.json  20260426T222346Z-github-audit.json  20260426T222414Z-github-audit.json  20260426T222418Z-github-audit.json  20260426T223310Z-github-audit.json  20260426T223337Z-github-audit.json  20260426T224121Z-github-audit.json  20260426T224215Z-github-audit.json  20260426T232930Z-github-audit.json  20260426T232958Z-github-audit.json  20260426T234256Z-github-audit.json  20260426T234420Z-github-audit.json  20260426T234448Z-github-audit.json  20260427T040635Z-github-audit.json  20260427T041148Z-github-audit.json  20260427T150525Z-github-audit.json  ACCEPTANCE.md  AGENT.md  AGENTS.md  API.md  ARCHITECTURE.md  CANDIDATE-QUEUE.md  CLAUDE-CODE-FIELD-GUIDE.md  CLAUDE.md  CODEBASE-GUIDE.md  CONTRIBUTING.md  DATA-MODELS.md  (+47 more)
.agents/: README.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
adapters/: ADAPTER-INDEX.md  ANTIGRAVITY.md  CLAUDE.md  CODEX.md  COPILOT.md  CURSOR.md  GEMINI.md  README.md
docs-html/: CANDIDATE-QUEUE.html  CLAUDE-CODE-FIELD-GUIDE.html  index.html  (+11 more)
(+324 files in other folders)
